# pipes-binary

./: .gitignore  LICENSE  NEWS  PEOPLE  README.md  changelog  changelog.md  default.nix  flake.nix  hs-overlay.nix  nixpkgs.nix  pipes-binary.cabal  pkg.nix  shell.nix  sources.txt
src/Control/Proxy/: Binary.hs
src/Control/Proxy/Binary/: Internal.hs  Types.hs
src/Pipes/: Binary.hs
src/Pipes/Binary/: Internal.hs
tests/: Main.hs
