name:               pipes-binary
version:            0.3
license:            BSD3
license-file:       LICENSE
copyright:          Copyright (c) Renzo Carbonara 2013
author:             Renzo Carbonara
maintainer:         renzocarbonaraλgmail.com
stability:          Experimental
homepage:           https://github.com/k0001/pipes-binary
bug-reports:        https://github.com/k0001/pipes-binary/issues
category:           Pipes
build-type:         Simple
synopsis:           Encode and decode binary streams using the pipes and binary libraries.
cabal-version:      >=1.8
extra-source-files: README.md PEOPLE NEWS
description:
  Encode and decode binary Pipes streams using the @binary@ library.
  .
  See the @NEWS@ file in the source distribution to learn about any
  important changes between version.

source-repository head
    type: git
    location: git://github.com/k0001/pipes-binary.git

library
    hs-source-dirs:    src
    build-depends:
          base             >= 4.5     && < 5
        , binary           >= 0.6     && < 0.8
        , lens-family      >= 1.0.0   && < 1.1
        , pipes            >= 4.0.0   && < 4.1
        , pipes-parse      >= 3.0.0   && < 3.1
        , pipes-bytestring >= 2.0.0   && < 2.1
        , transformers     >= 0.2.0.0 && < 0.4
    exposed-modules: Pipes.Binary
    ghc-options: -Wall -O2
